# asw

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.full  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.claude/commands/: build-region.md  run-remote.md  visualize.md
.github/: dependabot.yml
.github/workflows/: ci-check.yml  ci.yml  docker.yml  release.yml
benchmarks/: BENCHMARKS.md  bench-routes.geojson
crates/asw-build/: Cargo.toml
crates/asw-build/src/: canal_water.rs  cells.rs  coastline.rs  edges.rs  lib.rs  pipeline.rs  shapefile.rs  shore.rs
crates/asw-cli/: Cargo.toml
crates/asw-cli/src/: bench.rs  download.rs  main.rs  srcdir.rs
crates/asw-cli/tests/: version.rs
crates/asw-cloud/: Cargo.toml
crates/asw-cloud/src/: config.rs  hetzner.rs  lib.rs  pipeline.rs  ssh.rs
crates/asw-core/: Cargo.toml
crates/asw-core/examples/: graph_compare.rs
crates/asw-core/src/: astar_pool.rs  geo_index.rs  graph.rs  h3.rs  lib.rs  passages.rs  routing.rs  varint.rs
crates/asw-serve/: Cargo.toml
crates/asw-serve/src/: api.rs  main.rs  state.rs
docs/: deployment.md
docs/reviews/: 2026-07-06-fable5-project-review.md
docs/screenshots/: hexagons.html  marmaris-hexagons.geojson  route-sf-mykolaiv.geojson  route.html
docs/superpowers/plans/: 2026-03-12-cicd-hardening.md  2026-03-13-compact-graph.md  2026-03-13-km-to-nm.md  2026-03-16-api-key-auth.md  2026-03-16-v010-release.md  2026-03-17-memory-reduction.md  2026-03-23-canal-water-subtraction.md  2026-03-24-pending-fixes.md  2026-03-24-readme-redesign.md  2026-03-24-v031-release.md  2026-07-04-sea-route-demo.md  2026-07-06-shore-buffer.md  2026-07-07-true-endpoint-routing.md  2026-07-08-land-legs.md
docs/superpowers/specs/: 2026-03-12-cicd-hardening-design.md  2026-03-13-compact-graph-design.md  2026-03-13-km-to-nm-design.md  2026-03-16-api-key-auth-design.md  2026-03-16-v010-release-design.md  2026-03-17-memory-reduction-design.md  2026-03-24-pending-fixes-design.md  2026-03-24-readme-redesign-design.md  2026-07-04-sea-route-demo-design.md  2026-07-06-shore-buffer-design.md  2026-07-07-true-endpoint-routing-design.md  2026-07-08-land-legs-design.md
examples/map-routing/: Dockerfile  README.md  docker-compose.yml  index.html
