[workspace]
resolver = "2"
members = [
    "crates/asw-core",
    "crates/asw-build",
    "crates/asw-serve",
    "crates/asw-cloud",
    "crates/asw-cli",
]

[workspace.dependencies]
h3o = { version = "0.9", features = ["geo"] }
geo = "0.32"
rstar = "0.13"
rayon = "1.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcode = { version = "0.6", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18"
ordered-float = "5"
geojson = "1.0"
anyhow = "1"
zstd = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
