[package]
name = "asw-build"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
asw-core = { path = "../asw-core" }
h3o.workspace = true
geo.workspace = true
geo-types.workspace = true
rstar.workspace = true
rayon.workspace = true
serde.workspace = true
tracing.workspace = true
indicatif.workspace = true
anyhow.workspace = true
shapefile = "0.8"
reqwest = { version = "0.13", features = ["blocking"] }
zip = "8"
