[package]
name = "asw-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
h3o.workspace = true
geo.workspace = true
geo-types.workspace = true
rstar.workspace = true
rayon.workspace = true
serde.workspace = true
bitcode.workspace = true
ordered-float.workspace = true
geojson.workspace = true
tracing.workspace = true
anyhow.workspace = true
zstd.workspace = true
