[package]
name = "asw-serve"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
asw-core = { path = "../asw-core" }
rstar.workspace = true
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
geojson.workspace = true
tracing.workspace = true
anyhow.workspace = true
subtle = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["macros", "rt"] }
