[package]
name = "asw-serve"
version = "0.6.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
asw-core = { path = "../asw-core" }
h3o.workspace = true
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde.workspace = true
serde_json.workspace = true
geojson.workspace = true
tracing.workspace = true
anyhow.workspace = true
subtle = "2"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["macros", "rt"] }
